# latex_tool_generator

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.app  Dockerfile.runner  Dockerfile.streamlit  Dockerfile.test  Dockerfile.worker  Makefile  Makefile.test  README.md  deployment.api.yaml  deployment.streamlit.yaml  deployment.worker.yaml  docker-compose.yml  hpa.worker.yaml  main.py  offer_test.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  tox.ini
.github/workflows/: cd.yml  ci.yml  db-backup.yml  deploy-render.yml  tests.yml
ATS_approche/: Souple_workday.md
data/header/: header.json
db/: README.md  formations.csv  my_experiences.csv  my_projects.csv  recruitment_assistant.db-shm  recruitment_assistant.db-wal  schema_init.sql  schema_inti_old.sql  schema_postgres.sql
docs/: API_SPEC.md  APP_STREAMLIT.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DOCKER_COMMANDS.md  FEUILLE_DE_ROUTE_MIGRATION_SPACY_HF.md  GITHUB_SECRETS.md  INDEX.md  INFRASTRUCTURE.md  MIGRATION.md  UX_FEUILLE_DE_ROUTE.md  WORKFLOWS.md
runs/: scan_secrets_output.txt
scripts/: Clean.sh  README.md  bootstrap_all.sh  bootstrap_venv.sh  build_and_tag_all.sh  clean_docker.sh  convert_multiline_to_json.py  dev_run_streamlit.sh  generate_api_key.sh  init_db.sh  init_postgres_db.sh  job_offer.txt  lint.sh  mirror_sqlite_to_postgres.sh  monitor_data.sh  monitor_db.sh  offer_input.txt  run_api_container.sh  run_services.sh  run_tests.sh  run_tests_docker.sh  run_unit_tests_container.sh  sample_api_response.json  scan_secrets.sh  start_api.sh  uv_sync.sh
src/: requirements.txt
streamlit/: README.md
tests/: README.md  conftest.py  requirements-test.txt  test_api_gateway.py  test_archive_manager.py  test_core_models.py  test_core_utils.py  test_generation_service.py  test_job_parser.py  test_matching_service.py  test_metadata_index.py  test_parsing_service.py  test_pipeline.py  test_validation.py  test_worker.py
(+325 files in other folders)
