[project]
name = "latex_tool_generator"
version = "0.1.0"
description = "Gestion de recherche d'emploi génération de CV"
authors = ["Charly-Romy Tanga charlyromytanga@gmail.com"]
readme = "README.md"
requires-python = ">=3.10"



# Dépendances minimales communes (core)
dependencies = [
	"pydantic",
	"scikit-learn",
	"pandas",
	"python-dotenv",
	"requests",
	"anthropic",
	"spacy>=3.8.14",
	"sentence-transformers>=5.4.1",
	"fastapi>=0.135.3",
	"uvicorn>=0.44.0",
]



# Dépendances optionnelles (format uv)
optional-dependencies.api = [
	"fastapi",
	"uvicorn"
]
optional-dependencies.streamlit = [
	"streamlit"
]
optional-dependencies.test = [
	"pytest",
	"flake8"
]

